Adicionando novas informações de trabalho e projetos

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
@@ -11,8 +10,8 @@
         <meta name="description" content="Co-founder @ Fight Analytics">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,800,600,300' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="assets/css/normalize.css?420">
-        <link rel="stylesheet" href="assets/css/main.css?420">
+        <link rel="stylesheet" href="assets/css/normalize.css?421">
+        <link rel="stylesheet" href="assets/css/main.css?421">
     </head>
     <body>
         <header>
@@ -22,40 +21,118 @@
             <div class="title">
                 <h1>Lucas Sanchez</h1>
             </div>
-            <div class="description">
-                <p>Co-founder @ <a href="http://fightanalytics.cc/" title="Brain Over Brawn">Fight Analytics</a>, <a href="https://www.facebook.com/DJ-SET-JUNKIE-980359958721681/" title="World wide music">DJ Set Junkie</a>, <strong title="Soon">Hustle</strong>.</p>
-                <p>Startups | UX | UI | JS | <a href="https://www.facebook.com/swpoa/photos/a.743260879066386.1073741825.221597157899430/756469001078907/?type=1" title="No talk, all action!">SWPOA</a> winner.</p>
+            <div class="description"> 
+                <p>Co-founder - Chief of Product and Development @ <a href="http://fightanalytics.cc/" title="Brain Over Brawn">Fight Analytics</a>.</p>
+                <p>Porto Alegre - Brasil | <a href="https://www.facebook.com/swpoa/photos/a.743260879066386.1073741825.221597157899430/756469001078907/?type=1" title="No talk, all action!">SWPOA</a> winner.</p>
+            </div>
+        </header>
+        --
+            <div class="title">
+                <h2>Places I've worked at</h2>
             </div>
             <div class="menu">
                 <ul>
                     <li>
-                        <span>
-                            <small>Phone</small>
-                            <strong>+55 51 9260 9214</strong>
-                        </span>
+                        <a href="#">
+                            <small>CEO</small>
+                            <strong>Santins</strong>
+                        </a>
                     </li>
                     <li>
-                        <span>
-                            <small>E-mail</small>
-                            <strong><a class="__cf_email__" href="/cdn-cgi/l/email-protection" data-cfemail="4f233a2c2e3c0f292628273b2e212e23363b262c3c612c2c">[email&#160;protected]</a><script data-cfhash='f9e31' type="text/javascript">/* <![CDATA[ */!function(t,e,r,n,c,a,p){try{t=document.currentScript||function(){for(t=document.getElementsByTagName('script'),e=t.length;e--;)if(t[e].getAttribute('data-cfhash'))return t[e]}();if(t&&(c=t.previousSibling)){p=t.parentNode;if(a=c.getAttribute('data-cfemail')){for(e='',r='0x'+a.substr(0,2)|0,n=2;a.length-n;n+=2)e+='%'+('0'+('0x'+a.substr(n,2)^r).toString(16)).slice(-2);p.replaceChild(document.createTextNode(decodeURIComponent(e)),c)}p.removeChild(t)}}catch(u){}}()/* ]]> */</script></strong>
-                        </span>
+                        <a href="#">
+                            <small>Front End Developer</small>
+                            <strong>3yz</strong>
+                        </a>
                     </li>
                     <li>
-                        <a>
-                            <small>Linkedin</small>
-                            <strong><a href="https://br.linkedin.com/in/lucassanchez">/lucassanchez</a></strong>
+                        <a href="#">
+                            <small>Front End Developer</small>
+                            <strong>EzCommerce</strong>
                         </a>
                     </li>
                 </ul>
             </div>
-        </header>
-        <script>
+            <br>--<br>
+            <div class="title">
+                <h2>Projects I've done</h2>
+            </div>
+            <div class="menu">
+                <ul>
+                    <li>
+                        <a href="http://festadisk.com.br">
+                            <small>Producer / Developer</small>
+                            <strong>Disk</strong>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.facebook.com/djsetjunkie/?fref=ts">
+                            <small>Producer / Designer</small>
+                            <strong>DJ Set Junkie</strong>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.facebook.com/comixlab.co/home">
+                            <small>Co-founder / Developer</small>
+                            <strong>ComixLab</strong>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <small>Developer</small>
+                            <strong>Anitta - Bang</strong>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="http://mindstart.com.br/">
+                            <small>Developer / Designer</small>
+                            <strong>Mindstart</strong>
+                        </a>
+                    </li>
+                    <li>
+                        <a>
+                            <small>and a lot more in my</small>
+                            <strong>10 years of experience</strong>
+                        </a>
+                    </li>
+                </ul>
+            </div>
 
-             var _gaq=[['_setAccount','UA-3600225-2'],['_trackPageview']];
+
+        <br>
+        --
+        <br>
+        <div class="title">
+                <h2>Get in touch</h2>
+            </div>
+            <div class="menu">
+                <ul>
+                    <li>
+                        <a href="https://medium.com/@lucassanchez">
+                            <small>Medium - PT BR</small>
+                            <strong>@lucassanchez</strong>
+                        </a>
+                    </li>
+                    <li>
+                        <span>
+                            <small>E-mail</small>
+                            <strong>olucassanchez(at)gmail.com</strong>
+                        </span>
+                    </li>
+                    <li>
+                        <a href="https://br.linkedin.com/in/lucassanchez">
+                            <small>Linkedin</small>
+                            <strong>/lucassanchez</strong>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+
+
+        <script>
+            var _gaq=[['_setAccount','UA-3600225-2'],['_trackPageview']];
             (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
             g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
             s.parentNode.insertBefore(g,s)}(document,'script'));
-
         </script>
     </body>
 </html>
