Trocando foto de perfil e adicionando link da Fight Analytics em projetos

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <body>
         <header>
             <div class="avatar">
-                <img src="https://scontent-gru2-1.xx.fbcdn.net/t31.0-8/s960x960/12265782_10206026006422436_4199662318315984055_o.jpg" alt="Lucas Sanchez">
+                <img src="https://media.licdn.com/media/AAEAAQAAAAAAAAekAAAAJDgyYjY4NTVhLWQzYjItNGU5ZS1hMGE5LTQ5ZGRiMmUwOTIxNA.jpg" alt="Lucas Sanchez">
             </div>
             <div class="title">
                 <h1>Lucas Sanchez</h1>
             </div>
             <div class="description"> 
-                <p>Co-founder - Chief of Product and Development @ <a href="http://fightanalytics.cc/" title="Brain Over Brawn">Fight Analytics</a>.</p>
+                <p>Co-founder @ <a href="http://fightanalytics.cc/" title="Brain Over Brawn">Fight Analytics</a>.</p>
                 <p>Porto Alegre - Brasil | <a href="https://www.facebook.com/swpoa/photos/a.743260879066386.1073741825.221597157899430/756469001078907/?type=1" title="No talk, all action!">SWPOA</a> winner.</p>
             </div>
         </header>
@@ -83,9 +83,9 @@
                         </a>
                     </li>
                     <li>
-                        <a href="http://mindstart.com.br/">
+                        <a href="http://fightanalytics.cc/products/">
                             <small>Developer / Designer</small>
-                            <strong>Mindstart</strong>
+                            <strong>Fight Analytics Products</strong>
                         </a>
                     </li>
                     <li>
