Adicionando imagens e corrigindo links dos trabalhos

--- a/index.html
+++ b/index.html
@@ -59,39 +59,50 @@
             <div class="menu">
                 <ul>
                     <li>
-                        <a href="http://festadisk.com.br">
-                            <small>Producer / Developer</small>
-                            <strong>Disk</strong>
+                        <a href="http://anitta-bang.herokuapp.com/">
+                        	<span class="thumb">
+                        		<img src="http://anitta-bang.herokuapp.com/img/gif_anitta.gif" alt="">
+                        	</span>
+                            <strong>Anitta - Bang My Avatar</strong>
+                            <small>Developer</small>
+                            <span class="desc">Build your own avatar with Anitta's acessorys</span>
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.facebook.com/djsetjunkie/?fref=ts">
-                            <small>Producer / Designer</small>
-                            <strong>DJ Set Junkie</strong>
+                        <a href="http://fightanalytics.com">
+	                    	<span class="thumb">
+	                    		<img src="https://i.snag.gy/Wpb7i8.jpg" alt="">
+	                    	</span>
+                            <strong>Fight Analytics</strong>
+                            <small>Designer / Developer</small>
+                            <span class="desc">Site and all embed widgets products</span>
                         </a>
                     </li>
                     <li>
                         <a href="https://www.facebook.com/comixlab.co/home">
-                            <small>Co-founder / Developer</small>
+	                    	<span class="thumb">
+	                    		<img src="https://snag.gy/9nt6DY.jpg" alt="">
+	                    	</span>
                             <strong>ComixLab</strong>
+                            <small>Co-founder / Developer</small>
+                            <span class="desc">Startup Weekend Winner</span>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
-                            <small>Developer</small>
-                            <strong>Anitta - Bang</strong>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="http://fightanalytics.cc/products/">
-                            <small>Developer / Designer</small>
-                            <strong>Fight Analytics Products</strong>
+                        <a href="https://www.facebook.com/djsetjunkie/?fref=ts">
+	                    	<span class="thumb">
+	                    		<img src="https://media.giphy.com/media/xT1XGFv78oSWALxDqM/giphy.gif" alt="">
+	                    	</span>
+                            <strong>DJ Set Junkie</strong>
+                            <small>Producer / Designer</small>
+                            <span class="desc">Side project</span>
                         </a>
                     </li>
                     <li>
                         <a>
-                            <small>and a lot more in my</small>
-                            <strong>10 years of experience</strong>
+                            <strong>and a lot more in my</strong>
+                            <small>10+ years of experience</small>
+                            <span class="desc">Get in touch to know more!</span>
                         </a>
                     </li>
                 </ul>
