Corrigindo erro de escrita

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         	</span>
                             <strong>Anitta - Bang My Avatar</strong>
                             <small>Developer</small>
-                            <span class="desc">Build your own avatar with Anitta's acessorys</span>
+                            <span class="desc">Build your own avatar with Anitta's accessories</span>
                         </a>
                     </li>
                     <li>
