--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta name="description" content="Co-founder @ Fight Analytics">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,800,600,300' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="assets/css/normalize.css?421">
+        <link rel="stylesheet" href="https://getbootstrap.com/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="assets/css/main.css?421">
     </head>
     <body>
@@ -57,8 +57,8 @@
                 <h2>Projects I've done</h2>
             </div>
             <div class="menu">
-                <ul>
-                    <li>
+                <ul class="row">
+                    <li class="col-md-3">
                         <a href="http://anitta-bang.herokuapp.com/">
                         	<span class="thumb">
                         		<img src="http://anitta-bang.herokuapp.com/img/gif_anitta.gif" alt="">
@@ -68,17 +68,77 @@
                             <span class="desc">Build your own avatar with Anitta's accessories</span>
                         </a>
                     </li>
-                    <li>
+                    <li class="col-md-3">
                         <a href="http://fightanalytics.com">
 	                    	<span class="thumb">
 	                    		<img src="https://i.snag.gy/Wpb7i8.jpg" alt="">
 	                    	</span>
                             <strong>Fight Analytics</strong>
                             <small>Designer / Developer</small>
-                            <span class="desc">Site and all embed widgets products</span>
+                            <span class="desc">Site, real time stats system and all widgets</span>
                         </a>
                     </li>
-                    <li>
+                    <li class="col-md-3">
+                        <a href="http://www.infocurriculo.com.br/">
+                            <span class="thumb">
+                                <img src="http://i.imgur.com/RlRH5nK.png" alt="">
+                            </span>
+                            <strong>Senac - Infocurrículo</strong>
+                            <small>Developer / Designer</small>
+                            <span class="desc">PHP - Leonels's Ignite</span>
+                        </a>
+                    </li>
+                    <li class="col-md-3">
+                        <a href="http://www.beco203.com.br/">
+                            <span class="thumb">
+                                <img src="http://i.imgur.com/JzKqr8l.png" alt="">
+                            </span>
+                            <strong>Beco 203 - Website</strong>
+                            <small>Developer / Manager</small>
+                            <span class="desc">PHP - Dudu's Ignite</span>
+                        </a>
+                    </li>
+                    <li class="col-md-3">
+                        <a href="http://www.tuut.com.br/home/">
+                            <span class="thumb">
+                                <img src="http://i.imgur.com/xoayUkD.png" alt="">
+                            </span>
+                            <strong>Tuut - Website</strong>
+                            <small>Developer</small>
+                            <span class="desc">Wordpress</span>
+                        </a>
+                    </li>
+                    <li class="col-md-3">
+                        <a href="http://www.brconfidencial.com/">
+                            <span class="thumb">
+                                <img src="http://i.imgur.com/MemjBt1.png" alt="">
+                            </span>
+                            <strong>Br Confidencial - Website</strong>
+                            <small>Developer</small>
+                            <span class="desc">Wordpress</span>
+                        </a>
+                    </li>
+                    <li class="col-md-3">
+                        <a href="https://paysmart.com.br/">
+                            <span class="thumb">
+                                <img src="http://i.imgur.com/5k58zif.png" alt="">
+                            </span>
+                            <strong>PaySmart - Website</strong>
+                            <small>Developer</small>
+                            <span class="desc">Wordpress</span>
+                        </a>
+                    </li>
+                    <li class="col-md-3">
+                        <a href="http://morumbicorporate.com.br/">
+                            <span class="thumb">
+                                <img src="http://i.imgur.com/z6YB8B9.png" alt="">
+                            </span>
+                            <strong>Morumbi Corporate - Website</strong>
+                            <small>Developer</small>
+                            <span class="desc">Wordpress</span>
+                        </a>
+                    </li>
+                    <li class="col-md-3">
                         <a href="https://www.facebook.com/comixlab.co/home">
 	                    	<span class="thumb">
 	                    		<img src="https://snag.gy/9nt6DY.jpg" alt="">
@@ -88,7 +148,7 @@
                             <span class="desc">Startup Weekend Winner</span>
                         </a>
                     </li>
-                    <li>
+                    <li class="col-md-3">
                         <a href="https://www.facebook.com/djsetjunkie/?fref=ts">
 	                    	<span class="thumb">
 	                    		<img src="https://media.giphy.com/media/xT1XGFv78oSWALxDqM/giphy.gif" alt="">
@@ -98,8 +158,8 @@
                             <span class="desc">Side project</span>
                         </a>
                     </li>
-                    <li>
-                        <a>
+                    <li class="col-md-12">
+                        <a><br><br><br>
                             <strong>and a lot more in my</strong>
                             <small>10+ years of experience</small>
                             <span class="desc">Get in touch to know more!</span>
