Update some infos and links

--- a/index.html
+++ b/index.html
@@ -16,14 +16,18 @@
     <body>
         <header>
             <div class="avatar">
-                <img src="https://media.licdn.com/media/AAEAAQAAAAAAAAekAAAAJDgyYjY4NTVhLWQzYjItNGU5ZS1hMGE5LTQ5ZGRiMmUwOTIxNA.jpg" alt="Lucas Sanchez">
+                <img src="https://avatars0.githubusercontent.com/u/2191020?s=400&u=eb574ac17b68b392024376a4137a89afd8422e5b&v=4" alt="Lucas Sanchez">
             </div>
             <div class="title">
                 <h1>Lucas Sanchez</h1>
             </div>
             <div class="description"> 
-                <p>Co-founder @ <a href="http://fightanalytics.cc/" title="Brain Over Brawn">Fight Analytics</a>.</p>
+                <p>Developer @ <a href="https://www.zenvia.com">Zenvia</a> | Co-founder @ <a href="http://fightanalytics.cc/" title="Brain Over Brawn">Fight Analytics</a>.</p>
                 <p>Porto Alegre - Brasil | <a href="https://www.facebook.com/swpoa/photos/a.743260879066386.1073741825.221597157899430/756469001078907/?type=1" title="No talk, all action!">SWPOA</a> winner.</p>
+                <p>--</p>
+                <p><a href="https://github.com/lucassanchez">Github</a> | <a href="https://www.linkedin.com/in/lucassanchez/">Linkedin</a></p>
+                <p>--</p>
+                <p>Palestras do TDC: <a href="https://github.com/lucassanchez/js-tdc-poa-2017">https://github.com/lucassanchez/js-tdc-poa-2017</a></p>
             </div>
         </header>
         --
@@ -33,19 +37,25 @@
             <div class="menu">
                 <ul>
                     <li>
-                        <a href="#">
+                        <a href="http://lotadata.com">
+                            <small>Front End Developer</small>
+                            <strong>LotaData</strong>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="http://www.santins.com.br">
                             <small>CEO</small>
                             <strong>Santins</strong>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="http://3yz.com">
                             <small>Front End Developer</small>
                             <strong>3yz</strong>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="https://www.ezcommerce.com.br">
                             <small>Front End Developer</small>
                             <strong>EzCommerce</strong>
                         </a>
