--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Lucas Sanchez</title>
-        <meta name="description" content="Co-founder @ Fight Analytics">
+        <title>Lucas Inocente</title>
+        <meta name="description" content="Desenvolvo códigos e produtos.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,800,600,300' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="https://getbootstrap.com/dist/css/bootstrap.min.css">
-        <link rel="stylesheet" href="assets/css/main.css?421">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
+        <link rel="stylesheet" href="assets/css/main.css?420">
     </head>
     <body>
         <header>
