Indent the code

--- a/index.html
+++ b/index.html
@@ -1,218 +1,212 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Lucas Inocente</title>
-        <meta name="description" content="Desenvolvo códigos e produtos.">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
-        <link rel="stylesheet" href="assets/css/main.css?420">
-    </head>
-    <body>
-        <header>
-            <div class="avatar">
-                <img src="https://avatars0.githubusercontent.com/u/2191020?s=400&u=eb574ac17b68b392024376a4137a89afd8422e5b&v=4" alt="Lucas Sanchez">
-            </div>
-            <div class="title">
-                <h1>Lucas Sanchez</h1>
-            </div>
-            <div class="description"> 
-                <p>Developer @ <a href="https://www.zenvia.com">Zenvia</a> | Co-founder @ <a href="http://fightanalytics.cc/" title="Brain Over Brawn">Fight Analytics</a>.</p>
-                <p>Porto Alegre - Brasil | <a href="https://www.facebook.com/swpoa/photos/a.743260879066386.1073741825.221597157899430/756469001078907/?type=1" title="No talk, all action!">SWPOA</a> winner.</p>
-                <p>--</p>
-                <p><a href="https://github.com/lucassanchez">Github</a> | <a href="https://www.linkedin.com/in/lucassanchez/">Linkedin</a></p>
-                <p>--</p>
-                <p>Palestras do TDC: <a href="https://github.com/lucassanchez/js-tdc-poa-2017">https://github.com/lucassanchez/js-tdc-poa-2017</a></p>
-            </div>
-        </header>
-        --
-            <div class="title">
-                <h2>Places I've worked at</h2>
-            </div>
-            <div class="menu">
-                <ul>
-                    <li>
-                        <a href="http://lotadata.com">
-                            <small>Front End Developer</small>
-                            <strong>LotaData</strong>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="http://www.santins.com.br">
-                            <small>CEO</small>
-                            <strong>Santins</strong>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="http://3yz.com">
-                            <small>Front End Developer</small>
-                            <strong>3yz</strong>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.ezcommerce.com.br">
-                            <small>Front End Developer</small>
-                            <strong>EzCommerce</strong>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-            <br>--<br>
-            <div class="title">
-                <h2>Projects I've done</h2>
-            </div>
-            <div class="menu">
-                <ul class="row">
-                    <li class="col-md-3">
-                        <a href="http://anitta-bang.herokuapp.com/">
-                        	<span class="thumb">
-                        		<img src="http://anitta-bang.herokuapp.com/img/gif_anitta.gif" alt="">
-                        	</span>
-                            <strong>Anitta - Bang My Avatar</strong>
-                            <small>Developer</small>
-                            <span class="desc">Build your own avatar with Anitta's accessories</span>
-                        </a>
-                    </li>
-                    <li class="col-md-3">
-                        <a href="http://fightanalytics.com">
-	                    	<span class="thumb">
-	                    		<img src="https://i.snag.gy/Wpb7i8.jpg" alt="">
-	                    	</span>
-                            <strong>Fight Analytics</strong>
-                            <small>Designer / Developer</small>
-                            <span class="desc">Site, real time stats system and all widgets</span>
-                        </a>
-                    </li>
-                    <li class="col-md-3">
-                        <a href="http://www.infocurriculo.com.br/">
-                            <span class="thumb">
-                                <img src="http://i.imgur.com/RlRH5nK.png" alt="">
-                            </span>
-                            <strong>Senac - Infocurrículo</strong>
-                            <small>Developer / Designer</small>
-                            <span class="desc">PHP - Leonels's Ignite</span>
-                        </a>
-                    </li>
-                    <li class="col-md-3">
-                        <a href="http://www.beco203.com.br/">
-                            <span class="thumb">
-                                <img src="http://i.imgur.com/JzKqr8l.png" alt="">
-                            </span>
-                            <strong>Beco 203 - Website</strong>
-                            <small>Developer / Manager</small>
-                            <span class="desc">PHP - Dudu's Ignite</span>
-                        </a>
-                    </li>
-                    <li class="col-md-3">
-                        <a href="http://www.tuut.com.br/home/">
-                            <span class="thumb">
-                                <img src="http://i.imgur.com/xoayUkD.png" alt="">
-                            </span>
-                            <strong>Tuut - Website</strong>
-                            <small>Developer</small>
-                            <span class="desc">Wordpress</span>
-                        </a>
-                    </li>
-                    <li class="col-md-3">
-                        <a href="http://www.brconfidencial.com/">
-                            <span class="thumb">
-                                <img src="http://i.imgur.com/MemjBt1.png" alt="">
-                            </span>
-                            <strong>Br Confidencial - Website</strong>
-                            <small>Developer</small>
-                            <span class="desc">Wordpress</span>
-                        </a>
-                    </li>
-                    <li class="col-md-3">
-                        <a href="https://paysmart.com.br/">
-                            <span class="thumb">
-                                <img src="http://i.imgur.com/5k58zif.png" alt="">
-                            </span>
-                            <strong>PaySmart - Website</strong>
-                            <small>Developer</small>
-                            <span class="desc">Wordpress</span>
-                        </a>
-                    </li>
-                    <li class="col-md-3">
-                        <a href="http://morumbicorporate.com.br/">
-                            <span class="thumb">
-                                <img src="http://i.imgur.com/z6YB8B9.png" alt="">
-                            </span>
-                            <strong>Morumbi Corporate - Website</strong>
-                            <small>Developer</small>
-                            <span class="desc">Wordpress</span>
-                        </a>
-                    </li>
-                    <li class="col-md-3">
-                        <a href="https://www.facebook.com/comixlab.co/home">
-	                    	<span class="thumb">
-	                    		<img src="https://snag.gy/9nt6DY.jpg" alt="">
-	                    	</span>
-                            <strong>ComixLab</strong>
-                            <small>Co-founder / Developer</small>
-                            <span class="desc">Startup Weekend Winner</span>
-                        </a>
-                    </li>
-                    <li class="col-md-3">
-                        <a href="https://www.facebook.com/djsetjunkie/?fref=ts">
-	                    	<span class="thumb">
-	                    		<img src="https://media.giphy.com/media/xT1XGFv78oSWALxDqM/giphy.gif" alt="">
-	                    	</span>
-                            <strong>DJ Set Junkie</strong>
-                            <small>Producer / Designer</small>
-                            <span class="desc">Side project</span>
-                        </a>
-                    </li>
-                    <li class="col-md-12">
-                        <a><br><br><br>
-                            <strong>and a lot more in my</strong>
-                            <small>10+ years of experience</small>
-                            <span class="desc">Get in touch to know more!</span>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-
-
-        <br>
-        --
-        <br>
+<html class="no-js">
+<head>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<title>Lucas Inocente</title>
+<meta name="description" content="Desenvolvo códigos e produtos.">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
+<link rel="stylesheet" href="assets/css/main.css?420">
+</head>
+<body>
+    <header>
+        <div class="avatar">
+            <img src="https://avatars0.githubusercontent.com/u/2191020?s=400&u=eb574ac17b68b392024376a4137a89afd8422e5b&v=4" alt="Lucas Sanchez">
+        </div>
         <div class="title">
-                <h2>Get in touch</h2>
-            </div>
-            <div class="menu">
-                <ul>
-                    <li>
-                        <a href="https://medium.com/@lucassanchez">
-                            <small>Medium - PT BR</small>
-                            <strong>@lucassanchez</strong>
-                        </a>
-                    </li>
-                    <li>
-                        <span>
-                            <small>E-mail</small>
-                            <strong>olucassanchez(at)gmail.com</strong>
-                        </span>
-                    </li>
-                    <li>
-                        <a href="https://br.linkedin.com/in/lucassanchez">
-                            <small>Linkedin</small>
-                            <strong>/lucassanchez</strong>
-                        </a>
-                    </li>
-                </ul>
-            </div>
+            <h1>Lucas Inocente</h1>
+        </div>
+        <div class="description"> 
+            <p>Developer @ <a href="https://www.zenvia.com">Zenvia</a> | Co-founder @ <a href="http://fightanalytics.cc/" title="Brain Over Brawn">Fight Analytics</a>.</p>
+            <p>Porto Alegre - Brasil | <a href="https://www.facebook.com/swpoa/photos/a.743260879066386.1073741825.221597157899430/756469001078907/?type=1" title="No talk, all action!">SWPOA</a> winner.</p>
+            <p>--</p>
+            <p><a href="https://github.com/lucassanchez">Github</a> | <a href="https://www.linkedin.com/in/lucassanchez/">Linkedin</a></p>
+            <p>--</p>
+            <p>Palestras do TDC: <a href="https://github.com/lucassanchez/js-tdc-poa-2017">https://github.com/lucassanchez/js-tdc-poa-2017</a></p>
+        </div>
+    </header>
+    --
+    <div class="title">
+        <h2>Places I've worked at</h2>
+    </div>
+    <div class="menu">
+        <ul>
+            <li>
+                <a href="http://lotadata.com">
+                    <small>Front End Developer</small>
+                    <strong>LotaData</strong>
+                </a>
+            </li>
+            <li>
+                <a href="http://www.santins.com.br">
+                    <small>CEO</small>
+                    <strong>Santins</strong>
+                </a>
+            </li>
+            <li>
+                <a href="http://3yz.com">
+                    <small>Front End Developer</small>
+                    <strong>3yz</strong>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.ezcommerce.com.br">
+                    <small>Front End Developer</small>
+                    <strong>EzCommerce</strong>
+                </a>
+            </li>
+        </ul>
+    </div>
+    <br>--<br>
+    <div class="title">
+        <h2>Projects I've done</h2>
+    </div>
+    <div class="menu">
+        <ul class="row">
+            <li class="col-md-3">
+                <a href="http://anitta-bang.herokuapp.com/">
+                    <span class="thumb">
+                        <img src="http://anitta-bang.herokuapp.com/img/gif_anitta.gif" alt="">
+                    </span>
+                    <strong>Anitta - Bang My Avatar</strong>
+                    <small>Developer</small>
+                    <span class="desc">Build your own avatar with Anitta's accessories</span>
+                </a>
+            </li>
+            <li class="col-md-3">
+                <a href="http://fightanalytics.com">
+                    <span class="thumb">
+                        <img src="https://i.snag.gy/Wpb7i8.jpg" alt="">
+                    </span>
+                    <strong>Fight Analytics</strong>
+                    <small>Designer / Developer</small>
+                    <span class="desc">Site, real time stats system and all widgets</span>
+                </a>
+            </li>
+            <li class="col-md-3">
+                <a href="http://www.infocurriculo.com.br/">
+                    <span class="thumb">
+                        <img src="http://i.imgur.com/RlRH5nK.png" alt="">
+                    </span>
+                    <strong>Senac - Infocurrículo</strong>
+                    <small>Developer / Designer</small>
+                    <span class="desc">PHP - Leonels's Ignite</span>
+                </a>
+            </li>
+            <li class="col-md-3">
+                <a href="http://www.beco203.com.br/">
+                    <span class="thumb">
+                        <img src="http://i.imgur.com/JzKqr8l.png" alt="">
+                    </span>
+                    <strong>Beco 203 - Website</strong>
+                    <small>Developer / Manager</small>
+                    <span class="desc">PHP - Dudu's Ignite</span>
+                </a>
+            </li>
+            <li class="col-md-3">
+                <a href="http://www.tuut.com.br/home/">
+                    <span class="thumb">
+                        <img src="http://i.imgur.com/xoayUkD.png" alt="">
+                    </span>
+                    <strong>Tuut - Website</strong>
+                    <small>Developer</small>
+                    <span class="desc">Wordpress</span>
+                </a>
+            </li>
+            <li class="col-md-3">
+                <a href="http://www.brconfidencial.com/">
+                    <span class="thumb">
+                        <img src="http://i.imgur.com/MemjBt1.png" alt="">
+                    </span>
+                    <strong>Br Confidencial - Website</strong>
+                    <small>Developer</small>
+                    <span class="desc">Wordpress</span>
+                </a>
+            </li>
+            <li class="col-md-3">
+                <a href="https://paysmart.com.br/">
+                    <span class="thumb">
+                        <img src="http://i.imgur.com/5k58zif.png" alt="">
+                    </span>
+                    <strong>PaySmart - Website</strong>
+                    <small>Developer</small>
+                    <span class="desc">Wordpress</span>
+                </a>
+            </li>
+            <li class="col-md-3">
+                <a href="http://morumbicorporate.com.br/">
+                    <span class="thumb">
+                        <img src="http://i.imgur.com/z6YB8B9.png" alt="">
+                    </span>
+                    <strong>Morumbi Corporate - Website</strong>
+                    <small>Developer</small>
+                    <span class="desc">Wordpress</span>
+                </a>
+            </li>
+            <li class="col-md-3">
+                <a href="https://www.facebook.com/comixlab.co/home">
+                    <span class="thumb">
+                        <img src="https://snag.gy/9nt6DY.jpg" alt="">
+                    </span>
+                    <strong>ComixLab</strong>
+                    <small>Co-founder / Developer</small>
+                    <span class="desc">Startup Weekend Winner</span>
+                </a>
+            </li>
+            <li class="col-md-3">
+                <a href="https://www.facebook.com/djsetjunkie/?fref=ts">
+                    <span class="thumb">
+                        <img src="https://media.giphy.com/media/xT1XGFv78oSWALxDqM/giphy.gif" alt="">
+                    </span>
+                    <strong>DJ Set Junkie</strong>
+                    <small>Producer / Designer</small>
+                    <span class="desc">Side project</span>
+                </a>
+            </li>
+            <li class="col-md-12">
+                <a><br><br><br>
+                    <strong>and a lot more in my</strong>
+                    <small>10+ years of experience</small>
+                    <span class="desc">Get in touch to know more!</span>
+                </a>
+            </li>
+        </ul>
+    </div>
+    <br>
+    --
+    <br>
+    <div class="title">
+        <h2>Get in touch</h2>
+    </div>
+    <div class="menu">
+        <ul>
+            <li>
+                <a href="https://medium.com/@lucassanchez">
+                    <small>Medium - PT BR</small>
+                    <strong>@lucassanchez</strong>
+                </a>
+            </li>
+            <li>
+                <span>
+                    <small>E-mail</small>
+                    <strong>olucassanchez(at)gmail.com</strong>
+                </span>
+            </li>
+            <li>
+                <a href="https://br.linkedin.com/in/lucassanchez">
+                    <small>Linkedin</small>
+                    <strong>/lucassanchez</strong>
+                </a>
+            </li>
+        </ul>
+    </div>
 
-
-        <script>
-            var _gaq=[['_setAccount','UA-3600225-2'],['_trackPageview']];
-            (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-            g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
-            s.parentNode.insertBefore(g,s)}(document,'script'));
-        </script>
-    </body>
+<script>
+    var _gaq=[['_setAccount','UA-3600225-2'],['_trackPageview']];
+    (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
+    g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
+    s.parentNode.insertBefore(g,s)}(document,'script'));
+</script>
+</body>
 </html>
