Add github profile

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                 <div class="navbar-item">
                     <div class="field is-grouped">
                         <p class="control">
+                            <a class="button is-primary" href="https://github.com/lucassanchez">
+                                <span>Github</span>
+                            </a>
                             <a class="button is-primary" href="https://br.linkedin.com/in/lucassanchez">
                                 <span>Linkedin</span>
                             </a>
